src/style/main.css
.material-icons {
	font-size: 26px;
}

html {
	width: 100%;
	height: 100%;
	margin: 0;
}

body {
	margin: 0px;
	font-family: "Roboto", sans-serif;
	font-size: 15px;
	overflow-x: hidden;
	overflow-y: scroll;
	width: 100%;
	height: 100%;
	margin: 0;
	color: #111;
	background-attachment: fixed;
	background-image: url('image/background.jpg');
}
body.app {
	background-attachment: scroll;
	background-image: none;
	background: #333;
}

#background {
	position: fixed;
	top: 0; left: 0;
	right: 0; bottom: 0;
	z-index: -1;
	opacity: 0.2;
	background: -moz-radial-gradient(#aaa, transparent);
	background: -webkit-radial-gradient(#aaa, transparent);
	background: -ms-radial-gradient(#aaa, transparent);
	background: radial-gradient(#aaa, transparent);
	background-repeat: no-repeat;
	background-attachment: fixed;
}
body.app #background {
	display: none;
}

@media screen and (max-width: 900px) {
	body, #background {
		background-attachment: scroll;
	}
}

body.dev #background {
	background: -moz-radial-gradient(#a00, transparent);
	background: -webkit-radial-gradient(#a00, transparent);
	background: -ms-radial-gradient(#a00, transparent);
	background: radial-gradient(#a00, transparent);
}

body.beta #background {
	background: -moz-radial-gradient(#a0a, transparent);
	background: -webkit-radial-gradient(#a0a, transparent);
	background: -ms-radial-gradient(#a0a, transparent);
	background: radial-gradient(#a0a, transparent);
}

body.local #background {
	background: -moz-radial-gradient(#00a, transparent);
	background: -webkit-radial-gradient(#00a, transparent);
	background: -ms-radial-gradient(#00a, transparent);
	background: radial-gradient(#00a, transparent);
}

::selection {
	background: #61B01C;
	color: white;
}
::-moz-selection {
	background: #61B01C;
	color: white;
}

table {
	border-collapse: collapse;
}
td {
	padding: 0;
}

img {
	border-width: 0;
}

h1, h2, h3, h4 {
	font-weight: 400;
	margin: 0;
	color: #777;
}

h1 {
	font-size: 25px;
	line-height: 34px;
    display: inline-block;
    height: 36px;
    padding: 0 15px;
    color: white;
    position: relative;
    background: #5FAD1B;

    text-shadow: 0px 2px 3px rgba(0,0,0,0.2),
             0px 1px 3px rgba(0,0,0,0.1),
             0px 3px 6px rgba(0,0,0,0.1);

	-webkit-border-top-left-radius: 3px;
	-moz-border-radius-topleft: 3px;
	border-top-left-radius: 3px;

	white-space: nowrap;
	text-overflow: ellipsis;
}

h1 a, h1 a:visited {
	color: white;
}

h1::after {
	content: "";
	position: absolute;
	right: -19px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 36px 0 0 19px;
	border-color: transparent transparent transparent #5FAD1B;
}

h2 {
	font-size: 25px;
}

h3 {
	margin-top: 10px;
	margin-bottom: 10px;
	margin-left: -15px;
	background: #5FAD1B;
	display: inline-block;
	color: white;
	padding: 5px 10px;
	font-size: 18px;
	position: relative;
	height: 22px;
}

h3::before {
	content: "";
	position: absolute;
	left: -10px;
	top: 5px;
	width: 10px;
	height: 32px;
	background: #559C18;
}

h3::after {
	content: "";
	position: absolute;
	right: -12px;
	top: 0;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 32px 0 0 12px;
	border-color: transparent transparent transparent #5FAD1B;
}

h4 {
	font-size: 18px;
	color: #666;
	font-weight: bold
}

a {
	color: #111;
	text-decoration: none;
}

a:visited {
	color: #111;
}

textarea {
	font-family: "Roboto";
	font-size: 15px;
}

[draggable] {
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    user-select: none;
}

/*
 * Notifs and messages popups
 */
#notifications-popup, #messages-popup {
	display: none;
	position: absolute;
	z-index: 1200;
	background-color: #f2f2f2;
	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.5);
	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,.5);
	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
	border-radius: 5px;
}
body.app #notifications-popup, body.app #messages-popup {
	position: fixed;
}

#notifs-menu, #messages-menu {
	position: relative;
}

#messages-menu .messages,
#notifs-menu .notifications {
	max-height: 360px;
	overflow-y: auto;
	overflow-x: hidden;
}

#notifs-arrow, #messages-arrow {
	position: absolute;
	top: -7px;
	left: 193px;
	width: 0px;
	height: 0px;
	border-color: transparent transparent #EEE;
	border-style: solid;
	border-width: 0px 9px 9px 9px;
}

#all-notifs, #all-messages {
	cursor: pointer;
	height: 42px;
	line-height: 42px;
	text-align: center;
	-webkit-border-bottom-right-radius: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-moz-border-radius-bottomright: 5px;
	-moz-border-radius-bottomleft: 5px;
	border-bottom-right-radius: 5px;
	border-bottom-left-radius: 5px;
}

#all-notifs a, #all-messages a {
	color: #777;
}

#all-notifs:hover, #all-messages:hover {
	background-color: white;
}

/* Console button */
#console {
	position: fixed;
	top: 46px;
	left: 38px;
	cursor: pointer;
	display: none;
}
#console img {
	width: 30px;
	opacity: 0.3;
}
#console:hover img {
	opacity: 0.6;
}

body.connected #console {
	display: block;
}
body.app #console {
	display: none;
}

/*
 * Menu
 */
#menu {
	width: 170px;
	position: fixed;
	top: 0;
	bottom: 0;
	padding-top: 46px;
	display: none;
}

#menu .menu-wrapper {
	background: rgba(80, 80, 80, 0.5);
	padding: 20px;
	padding-left: 0;
}

body.connected #menu {
	display: block;
}

body.menu-collapsed #menu {
	width: 68px;
}

#menu-button {
	background: rgba(80, 80, 80, 0.5);
	width: 20px;
	height: 20px;
	margin-bottom: 4px;
	padding: 5px;
	cursor: pointer;
}

#menu-button:hover {
	background: rgba(200, 200, 200, 0.4);
}

#menu-button:hover .icon {
	opacity: 1.0;
}

#menu-button .icon {
	width: 20px;
	height: 20px;
	opacity: 0.7;
	background-size: 20px 20px;
	background-position: center;
	background-image: url('image/chevron_left_white.png');
}

body.menu-collapsed #menu-button .icon {
	background-image: url('image/chevron_right_white.png');
}
/* ... */

